--- a/compose.yml
+++ b/compose.yml
@@ -1,4 +1,3 @@
----
 # yaml-language-server: $schema=https://raw.githubusercontent.com/compose-spec/compose-spec/main/schema/compose-spec.json
 services:
   caddy:
@@ -43,6 +42,12 @@ services:
       tinybird__workspaceId: ${TINYBIRD_WORKSPACE_ID:-}
       tinybird__tracker__datasource: analytics_events
       tinybird__stats__endpoint: ${TINYBIRD_API_URL:-https://api.tinybird.co}
+      mail__transport: SMTP
+      mail__options__host: smtp.mailgun.org
+      mail__options__port: 587
+      mail__options__secure: true
+      mail__options__auth__user: ${MAILGUN_USER:?MAILGUN_USER environment variable is required}
+      mail__options__auth__pass: ${MAILGUN_PASSWORD:?MAILGUN_PASSWORD environment variable is required}
     volumes:
       - ${UPLOAD_LOCATION:-./data/ghost}:/var/lib/ghost/content
     depends_on:
