chore: update compose

--- a/compose.yml
+++ b/compose.yml
@@ -35,11 +35,11 @@ services:
       database__connection__user: ${DATABASE_USER:-ghost}
       database__connection__password: ${DATABASE_PASSWORD:?DATABASE_PASSWORD environment variable is required}
       database__connection__database: ghost
-      # tinybird__tracker__endpoint: https://${DOMAIN:?DOMAIN environment variable is required}/.ghost/analytics/api/v1/page_hit
-      # tinybird__adminToken: ${TINYBIRD_ADMIN_TOKEN:-}
-      # tinybird__workspaceId: ${TINYBIRD_WORKSPACE_ID:-}
-      # tinybird__tracker__datasource: analytics_events
-      # tinybird__stats__endpoint: ${TINYBIRD_API_URL:-https://api.tinybird.co}
+      tinybird__tracker__endpoint: https://${DOMAIN:?DOMAIN environment variable is required}/.ghost/analytics/api/v1/page_hit
+      tinybird__adminToken: ${TINYBIRD_ADMIN_TOKEN:-}
+      tinybird__workspaceId: ${TINYBIRD_WORKSPACE_ID:-}
+      tinybird__tracker__datasource: analytics_events
+      tinybird__stats__endpoint: ${TINYBIRD_API_URL:-https://api.tinybird.co}
       mail__transport: SMTP
       mail__options__host: smtp.mailgun.org
       mail__options__port: 587
@@ -51,12 +51,12 @@ services:
     depends_on:
       db:
         condition: service_healthy
-      # tinybird-sync:
-      #   condition: service_completed_successfully
-      #   required: false
-      # tinybird-deploy:
-      #   condition: service_completed_successfully
-      #   required: false
+      tinybird-sync:
+        condition: service_completed_successfully
+        required: false
+      tinybird-deploy:
+        condition: service_completed_successfully
+        required: false
       activitypub:
         condition: service_started
         required: false
@@ -86,23 +86,23 @@ services:
     networks:
       - ghost_network
 
-  # traffic-analytics:
-  #   image: ghost/traffic-analytics:1.0.9@sha256:693e752f420b8b1bfcf9867946a09966552a15d4797b86b90ecf3d1dd0e1067c
-  #   restart: always
-  #   expose:
-  #     - "3000"
-  #   volumes:
-  #     - traffic_analytics_data:/data
-  #   environment:
-  #     NODE_ENV: production
-  #     PROXY_TARGET: ${TINYBIRD_API_URL:-https://api.tinybird.co}/v0/events
-  #     SALT_STORE_TYPE: ${SALT_STORE_TYPE:-file}
-  #     SALT_STORE_FILE_PATH: /data/salts.json
-  #     TINYBIRD_TRACKER_TOKEN: ${TINYBIRD_TRACKER_TOKEN:-}
-  #     LOG_LEVEL: debug
-  #   profiles: [analytics]
-  #   networks:
-  #     - ghost_network
+  traffic-analytics:
+    image: ghost/traffic-analytics:1.0.9@sha256:693e752f420b8b1bfcf9867946a09966552a15d4797b86b90ecf3d1dd0e1067c
+    restart: always
+    expose:
+      - "3000"
+    volumes:
+      - traffic_analytics_data:/data
+    environment:
+      NODE_ENV: production
+      PROXY_TARGET: ${TINYBIRD_API_URL:-https://api.tinybird.co}/v0/events
+      SALT_STORE_TYPE: ${SALT_STORE_TYPE:-file}
+      SALT_STORE_FILE_PATH: /data/salts.json
+      TINYBIRD_TRACKER_TOKEN: ${TINYBIRD_TRACKER_TOKEN:-}
+      LOG_LEVEL: debug
+    profiles: [analytics]
+    networks:
+      - ghost_network
 
   activitypub:
     image: ghcr.io/tryghost/activitypub:1.1.0@sha256:39c212fe23603b182d68e67d555c6b9b04b1e57459dfc0bef26d6e4980eb04d1
@@ -148,48 +148,48 @@ services:
   #   tty: false
   #   restart: no
 
-  # tinybird-sync:
-  #   # Do not alter this without updating the Ghost container as well
-  #   image: ghost:${GHOST_VERSION:-6-alpine}
-  #   command: >
-  #     sh -c "
-  #       if [ -d /var/lib/ghost/current/core/server/data/tinybird ]; then
-  #         rm -rf /data/tinybird/*;
-  #         cp -rf /var/lib/ghost/current/core/server/data/tinybird/* /data/tinybird/;
-  #         echo 'Tinybird files synced into shared volume.';
-  #       else
-  #         echo 'Tinybird source directory not found.';
-  #       fi
-  #     "
-  #   volumes:
-  #     - tinybird_files:/data/tinybird
-  #   depends_on:
-  #     tinybird-login:
-  #       condition: service_completed_successfully
-  #   networks:
-  #     - ghost_network
-  #   profiles: [analytics]
-  #   restart: no
+  tinybird-sync:
+    # Do not alter this without updating the Ghost container as well
+    image: ghost:${GHOST_VERSION:-6-alpine}
+    command: >
+      sh -c "
+        if [ -d /var/lib/ghost/current/core/server/data/tinybird ]; then
+          rm -rf /data/tinybird/*;
+          cp -rf /var/lib/ghost/current/core/server/data/tinybird/* /data/tinybird/;
+          echo 'Tinybird files synced into shared volume.';
+        else
+          echo 'Tinybird source directory not found.';
+        fi
+      "
+    volumes:
+      - tinybird_files:/data/tinybird
+    depends_on:
+      tinybird-login:
+        condition: service_completed_successfully
+    networks:
+      - ghost_network
+    profiles: [analytics]
+    restart: no
 
-  # tinybird-deploy:
-  #   build:
-  #     context: ./tinybird
-  #     dockerfile: Dockerfile
-  #   working_dir: /data/tinybird
-  #   command: >
-  #     sh -c "
-  #       tb-wrapper --cloud deploy
-  #     "
-  #   volumes:
-  #     - tinybird_home:/home/tinybird
-  #     - tinybird_files:/data/tinybird
-  #   depends_on:
-  #     tinybird-sync:
-  #       condition: service_completed_successfully
-  #   profiles: [analytics]
-  #   networks:
-  #     - ghost_network
-  #   tty: true
+  tinybird-deploy:
+    build:
+      context: ./tinybird
+      dockerfile: Dockerfile
+    working_dir: /data/tinybird
+    command: >
+      sh -c "
+        tb-wrapper --cloud deploy
+      "
+    volumes:
+      - tinybird_home:/home/tinybird
+      - tinybird_files:/data/tinybird
+    depends_on:
+      tinybird-sync:
+        condition: service_completed_successfully
+    profiles: [analytics]
+    networks:
+      - ghost_network
+    tty: true
 
   activitypub-migrate:
     image: ghcr.io/tryghost/activitypub-migrations:1.1.0@sha256:b3ab20f55d66eb79090130ff91b57fe93f8a4254b446c2c7fa4507535f503662
