--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,4 +1,8 @@
 {$DOMAIN} {
+	tls {
+		dns cloudflare {$CLOUDFLARE_AUTH_TOKEN}
+	}
+
 	import snippets/Logging
 
 	# Traffic Analytics service
@@ -22,6 +26,10 @@
 # Separate admin domains
 # To use a separate domain for Ghost Admin uncomment the block below (recommended)
 {$ADMIN_DOMAIN} {
+	tls {
+		dns cloudflare {$CLOUDFLARE_AUTH_TOKEN}
+	}
+
 	import snippets/Logging
 
 	# Traffic Analytics service
@@ -43,18 +51,11 @@
 }
 
 # Redirect www -> root domain
-# To redirect the www variant of your domain to the non-www variant uncomment the 4 lines below
-# Note: You must have DNS setup correctly for both domains for this to work
 www.{$DOMAIN} {
+	tls {
+		dns cloudflare {$CLOUDFLARE_AUTH_TOKEN}
+	}
+
 	import snippets/Logging
 	redir https://{$DOMAIN}{uri}
 }
-
-# Redirect root -> www domain
-# To redirect the non-www variant of your domain to the www variant uncomment the 4 lines below and change CHANGE_ME to your root domain
-# Note: You must have DNS setup correctly for both domains for this to work
-# When using ActivityPub with a www. domain, you must enable this redirect for ActivityPub to work correctly
-# CHANGE_ME {
-# 	import snippets/Logging
-# 	redir https://{$DOMAIN}{uri}
-# }
