--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,6 +1,4 @@
 {$DOMAIN} {
-	trusted_proxies 10.0.0.0/8
-
 	tls {
 		dns cloudflare {$CLOUDFLARE_AUTH_TOKEN}
 	}
@@ -15,7 +13,9 @@
 
 	# Default proxy everything else to Ghost
 	handle {
-		reverse_proxy ghost:2368
+		reverse_proxy ghost:2368 {
+			trusted_proxies 10.0.0.0/8
+		}
 	}
 
 	# Optional: Enable gzip compression
@@ -28,8 +28,6 @@
 # Separate admin domains
 # To use a separate domain for Ghost Admin uncomment the block below (recommended)
 {$ADMIN_DOMAIN} {
-	trusted_proxies 10.0.0.0/8
-
 	tls {
 		dns cloudflare {$CLOUDFLARE_AUTH_TOKEN}
 	}
@@ -44,7 +42,9 @@
 
 	# Default proxy everything else to Ghost
 	handle {
-		reverse_proxy ghost:2368
+		reverse_proxy ghost:2368 {
+			trusted_proxies 10.0.0.0/8
+		}
 	}
 
 	# Optional: Enable gzip compression
@@ -56,8 +56,6 @@
 
 # Redirect www -> root domain
 www.{$DOMAIN} {
-	trusted_proxies 10.0.0.0/8
-
 	tls {
 		dns cloudflare {$CLOUDFLARE_AUTH_TOKEN}
 	}
