--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,12 +1,4 @@
-servers {
-	trusted_proxies static 10.0.0.0/8
-}
-
 {$DOMAIN} {
-	tls {
-		dns cloudflare {$CLOUDFLARE_AUTH_TOKEN}
-	}
-
 	import snippets/Logging
 
 	# Traffic Analytics service
@@ -17,7 +9,9 @@ servers {
 
 	# Default proxy everything else to Ghost
 	handle {
-		reverse_proxy ghost:2368
+		reverse_proxy ghost:2368 {
+			trusted_proxies static 10.0.0.0/8
+		}
 	}
 
 	# Optional: Enable gzip compression
@@ -30,10 +24,6 @@ servers {
 # Separate admin domains
 # To use a separate domain for Ghost Admin uncomment the block below (recommended)
 {$ADMIN_DOMAIN} {
-	tls {
-		dns cloudflare {$CLOUDFLARE_AUTH_TOKEN}
-	}
-
 	import snippets/Logging
 
 	# Traffic Analytics service
@@ -44,7 +34,9 @@ servers {
 
 	# Default proxy everything else to Ghost
 	handle {
-		reverse_proxy ghost:2368
+		reverse_proxy ghost:2368 {
+			trusted_proxies static 10.0.0.0/8
+		}
 	}
 
 	# Optional: Enable gzip compression
@@ -56,10 +48,6 @@ servers {
 
 # Redirect www -> root domain
 www.{$DOMAIN} {
-	tls {
-		dns cloudflare {$CLOUDFLARE_AUTH_TOKEN}
-	}
-
 	import snippets/Logging
 	redir https://{$DOMAIN}{uri}
 }
