--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,4 +1,14 @@
-{$DOMAIN} {
+{$DOMAIN}:80 {
+	import snippets/Logging
+	redir https://{$DOMAIN}{uri}
+}
+
+{$ADMIN_DOMAIN}:80 {
+	import snippets/Logging
+	redir https://{$ADMIN_DOMAIN}{uri}
+}
+
+{$DOMAIN}:443 {
 	tls {
 		dns cloudflare {env.CLOUDFLARE_AUTH_TOKEN}
 	}
@@ -28,7 +38,7 @@
 
 # Separate admin domains
 # To use a separate domain for Ghost Admin uncomment the block below (recommended)
-{$ADMIN_DOMAIN} {
+{$ADMIN_DOMAIN}:443 {
 	tls {
 		dns cloudflare {env.CLOUDFLARE_AUTH_TOKEN}
 	}
