--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,3 +1,8 @@
+{
+	debug
+	auto_https disable_redirects
+}
+
 {$DOMAIN}:80 {
 	import snippets/Logging
 	redir https://{$DOMAIN}{uri}
@@ -26,6 +31,12 @@
 		reverse_proxy ghost:2368 {
 			# https://www.cloudflare.com/ips-v4
 			trusted_proxies 173.245.48.0/20 103.21.244.0/22 103.22.200.0/22 103.31.4.0/22 141.101.64.0/18 108.162.192.0/18 190.93.240.0/20 188.114.96.0/20 197.234.240.0/22 198.41.128.0/17 162.158.0.0/15 104.16.0.0/13 104.24.0.0/14 172.64.0.0/13 131.0.72.0/22 private_ranges
+
+			header_up Host {host} # redundant
+			header_up X-Real-IP {remote}
+			header_up X-Forwarded-For {remote}  # redundant
+			header_up X-Forwarded-Port {server_port} # redundant
+			header_up X-Forwarded-Proto {scheme}
 		}
 	}
 
@@ -56,6 +67,12 @@
 		reverse_proxy ghost:2368 {
 			# https://www.cloudflare.com/ips-v4
 			trusted_proxies 173.245.48.0/20 103.21.244.0/22 103.22.200.0/22 103.31.4.0/22 141.101.64.0/18 108.162.192.0/18 190.93.240.0/20 188.114.96.0/20 197.234.240.0/22 198.41.128.0/17 162.158.0.0/15 104.16.0.0/13 104.24.0.0/14 172.64.0.0/13 131.0.72.0/22 private_ranges
+
+			header_up Host {host} # redundant
+			header_up X-Real-IP {remote}
+			header_up X-Forwarded-For {remote}  # redundant
+			header_up X-Forwarded-Port {server_port} # redundant
+			header_up X-Forwarded-Proto {scheme}
 		}
 	}
 
