--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -21,6 +21,10 @@
 	handle {
 		reverse_proxy ghost:2368 {
 			trusted_proxies 173.245.48.0/20 103.21.244.0/22 103.22.200.0/22 103.31.4.0/22 141.101.64.0/18 108.162.192.0/18 190.93.240.0/20 188.114.96.0/20 197.234.240.0/22 198.41.128.0/17 162.158.0.0/15 104.16.0.0/13 104.24.0.0/14 172.64.0.0/13 131.0.72.0/22 private_ranges
+
+			header_up X-Forwarded-Host {$DOMAIN}
+			header_up X-Forwarded-Port 443
+			header_up X-Forwarded-Proto https
 		}
 	}
 
@@ -54,9 +58,9 @@
 			# header_up Host {host}
 			# header_up X-Real-IP {remote}
 			# header_up X-Forwarded-For {remote}
-			# header_up X-Forwarded-Host {host}
-			# header_up X-Forwarded-Port {server_port}
-			# header_up X-Forwarded-Proto {scheme}
+			header_up X-Forwarded-Host {$ADMIN_DOMAIN}
+			header_up X-Forwarded-Port 443
+			header_up X-Forwarded-Proto https
 		}
 	}
 
