--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -2,6 +2,7 @@
 
 {
 	debug
+	auto_https disable_redirects
 }
 
 {$DOMAIN} {
@@ -55,7 +56,7 @@
 		reverse_proxy ghost:2368 {
 			trusted_proxies 173.245.48.0/20 103.21.244.0/22 103.22.200.0/22 103.31.4.0/22 141.101.64.0/18 108.162.192.0/18 190.93.240.0/20 188.114.96.0/20 197.234.240.0/22 198.41.128.0/17 162.158.0.0/15 104.16.0.0/13 104.24.0.0/14 172.64.0.0/13 131.0.72.0/22 private_ranges
 
-			# header_up Host {host}
+			header_up Host {host}
 			# header_up X-Real-IP {remote}
 			# header_up X-Forwarded-For {remote}
 			header_up X-Forwarded-Host {$ADMIN_DOMAIN}
