--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,5 +1,9 @@
 # trusted_proxies copied from https://www.cloudflare.com/ips-v4
 
+{
+    debug
+}
+
 http://{$DOMAIN} {
 	import snippets/Logging
 
