--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,57 +1,45 @@
-# trusted_proxies copied from https://www.cloudflare.com/ips-v4
-
 {
-    debug
+	debug
 }
 
-http://{$DOMAIN} {
-	import snippets/Logging
-
-	# Traffic Analytics service
-	import snippets/TrafficAnalytics
-
-	# ActivityPub Service
-	import snippets/ActivityPub
-
-	# Default proxy everything else to Ghost
-	handle {
-		reverse_proxy ghost:2368 {
-			trusted_proxies 173.245.48.0/20 103.21.244.0/22 103.22.200.0/22 103.31.4.0/22 141.101.64.0/18 108.162.192.0/18 190.93.240.0/20 188.114.96.0/20 197.234.240.0/22 198.41.128.0/17 162.158.0.0/15 104.16.0.0/13 104.24.0.0/14 172.64.0.0/13 131.0.72.0/22 private_ranges
-
-			header_up Host {upstream_hostport}
-			header_up X-Forwarded-Host {host}
-		}
+{$DOMAIN} {
+	tls {
+		dns cloudflare {$CLOUDFLARE_AUTH_TOKEN}
+		resolvers 1.1.1.1
 	}
 
-	# Optional: Enable gzip compression
+	import snippets/Logging
+	import snippets/SecurityHeaders
 	encode gzip
 
-	# Optional: Add security headers
-	import snippets/SecurityHeaders
+	import snippets/TrafficAnalytics
+	import snippets/ActivityPub
+
+	handle {
+		reverse_proxy ghost:2368 {
+			# https://www.cloudflare.com/ips-v4
+			trusted_proxies 173.245.48.0/20 103.21.244.0/22 103.22.200.0/22 103.31.4.0/22 141.101.64.0/18 108.162.192.0/18 190.93.240.0/20 188.114.96.0/20 197.234.240.0/22 198.41.128.0/17 162.158.0.0/15 104.16.0.0/13 104.24.0.0/14 172.64.0.0/13 131.0.72.0/22 private_ranges
+		}
+	}
 }
 
-http://{$ADMIN_DOMAIN} {
-	import snippets/Logging
-
-	# Traffic Analytics service
-	import snippets/TrafficAnalytics
-
-	# ActivityPub Service
-	import snippets/ActivityPub
-
-	# Default proxy everything else to Ghost
-	handle {
-		reverse_proxy ghost:2368 {
-			trusted_proxies 173.245.48.0/20 103.21.244.0/22 103.22.200.0/22 103.31.4.0/22 141.101.64.0/18 108.162.192.0/18 190.93.240.0/20 188.114.96.0/20 197.234.240.0/22 198.41.128.0/17 162.158.0.0/15 104.16.0.0/13 104.24.0.0/14 172.64.0.0/13 131.0.72.0/22 private_ranges
-
-			header_up Host {upstream_hostport}
-			header_up X-Forwarded-Host {host}
-		}
+{$ADMIN_DOMAIN} {
+	tls {
+		dns cloudflare {env.CLOUDFLARE_AUTH_TOKEN}
+		resolvers 1.1.1.1
 	}
 
-	# Optional: Enable gzip compression
+	import snippets/Logging
+	import snippets/SecurityHeaders
 	encode gzip
 
-	# Optional: Add security headers
-	import snippets/SecurityHeaders
+	import snippets/TrafficAnalytics
+	import snippets/ActivityPub
+
+	handle {
+		reverse_proxy ghost:2368 {
+			# https://www.cloudflare.com/ips-v4
+			trusted_proxies 173.245.48.0/20 103.21.244.0/22 103.22.200.0/22 103.31.4.0/22 141.101.64.0/18 108.162.192.0/18 190.93.240.0/20 188.114.96.0/20 197.234.240.0/22 198.41.128.0/17 162.158.0.0/15 104.16.0.0/13 104.24.0.0/14 172.64.0.0/13 131.0.72.0/22 private_ranges
+		}
+	}
 }
