--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,8 +1,13 @@
 {
 	debug
+
+	servers {
+		# https://www.cloudflare.com/ips-v4
+		trusted_proxies 173.245.48.0/20 103.21.244.0/22 103.22.200.0/22 103.31.4.0/22 141.101.64.0/18 108.162.192.0/18 190.93.240.0/20 188.114.96.0/20 197.234.240.0/22 198.41.128.0/17 162.158.0.0/15 104.16.0.0/13 104.24.0.0/14 172.64.0.0/13 131.0.72.0/22 private_ranges
+	}
 }
 
-{$DOMAIN} {
+{$DOMAIN}, {$ADMIN_DOMAIN} {
 	tls {
 		dns cloudflare {$CLOUDFLARE_AUTH_TOKEN}
 		resolvers 1.1.1.1
@@ -16,30 +21,6 @@
 	import snippets/ActivityPub
 
 	handle {
-		reverse_proxy ghost:2368 {
-			# https://www.cloudflare.com/ips-v4
-			trusted_proxies 173.245.48.0/20 103.21.244.0/22 103.22.200.0/22 103.31.4.0/22 141.101.64.0/18 108.162.192.0/18 190.93.240.0/20 188.114.96.0/20 197.234.240.0/22 198.41.128.0/17 162.158.0.0/15 104.16.0.0/13 104.24.0.0/14 172.64.0.0/13 131.0.72.0/22 private_ranges
-		}
-	}
-}
-
-{$ADMIN_DOMAIN} {
-	tls {
-		dns cloudflare {env.CLOUDFLARE_AUTH_TOKEN}
-		resolvers 1.1.1.1
-	}
-
-	import snippets/Logging
-	import snippets/SecurityHeaders
-	encode gzip
-
-	import snippets/TrafficAnalytics
-	import snippets/ActivityPub
-
-	handle {
-		reverse_proxy ghost:2368 {
-			# https://www.cloudflare.com/ips-v4
-			trusted_proxies 173.245.48.0/20 103.21.244.0/22 103.22.200.0/22 103.31.4.0/22 141.101.64.0/18 108.162.192.0/18 190.93.240.0/20 188.114.96.0/20 197.234.240.0/22 198.41.128.0/17 162.158.0.0/15 104.16.0.0/13 104.24.0.0/14 172.64.0.0/13 131.0.72.0/22 private_ranges
-		}
+		reverse_proxy ghost:2368
 	}
 }
