--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -10,7 +10,7 @@
 {$DOMAIN}, {$ADMIN_DOMAIN} {
 	tls {
 		dns cloudflare {$CLOUDFLARE_AUTH_TOKEN}
-		resolvers 1.1.1.1
+		# resolvers 1.1.1.1
 	}
 
 	import snippets/Logging
