--- a/compose.yml
+++ b/compose.yml
@@ -1,83 +1,66 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/compose-spec/compose-spec/main/schema/compose-spec.json
 services:
-  caddy:
-    image: princemaple/docker-caddy:v2.10.0-cloudflare
-    restart: always
-    expose:
-      - 80
-      - 443
-    environment:
-      DOMAIN: ${DOMAIN:?DOMAIN environment variable is required}
-      ADMIN_DOMAIN: ${ADMIN_DOMAIN:-}
-      ACTIVITYPUB_TARGET: ${ACTIVITYPUB_TARGET:-https://ap.ghost.org}
-      CLOUDFLARE_AUTH_TOKEN: ${CLOUDFLARE_AUTH_TOKEN:-}
-    volumes:
-      - ./caddy:/etc/caddy
-      - caddy_data:/data
-      - caddy_config:/config
-    depends_on:
-      - ghost
-    networks:
-      - ghost_network
-
   ghost:
-    image: ghost:${GHOST_VERSION:-6-alpine}
+    image: ghost:6-alpine
     restart: always
-    expose:
-      - 2368
-    env_file:
-      - .env
     environment:
       NODE_ENV: production
-      url: https://${DOMAIN:?DOMAIN environment variable is required}
-      admin__url: ${ADMIN_DOMAIN:+https://${ADMIN_DOMAIN}}
+      url: https://${DOMAIN}
       database__client: mysql
       database__connection__host: db
-      database__connection__user: ${DATABASE_USER:-ghost}
-      database__connection__password: ${DATABASE_PASSWORD:?DATABASE_PASSWORD environment variable is required}
+      database__connection__user: ${DATABASE_USER}
+      database__connection__password: ${DATABASE_PASSWORD}
       database__connection__database: ghost
-      tinybird__tracker__endpoint: https://${DOMAIN:?DOMAIN environment variable is required}/.ghost/analytics/api/v1/page_hit
-      tinybird__adminToken: ${TINYBIRD_ADMIN_TOKEN:-}
-      tinybird__workspaceId: ${TINYBIRD_WORKSPACE_ID:-}
-      tinybird__tracker__datasource: analytics_events
-      tinybird__stats__endpoint: ${TINYBIRD_API_URL:-https://api.tinybird.co}
-      mail__transport: SMTP
-      mail__options__host: smtp.mailgun.org
-      mail__options__port: 587
-      mail__options__secure: true
-      mail__options__auth__user: ${MAILGUN_USER:?MAILGUN_USER environment variable is required}
-      mail__options__auth__pass: ${MAILGUN_PASSWORD:?MAILGUN_PASSWORD environment variable is required}
+      mail__transport: ${MAIL_TRANSPORT}
+      mail__options__host: ${MAIL_HOST}
+      mail__options__port: ${MAIL_PORT}
+      mail__options__secure: ${MAIL_SECURE}
+      mail__options__auth__user: ${MAIL_USER}
+      mail__options__auth__pass: ${MAIL_PASSWORD}
+      mail__from: ${MAIL_FROM}
+      ACTIVITYPUB_TARGET: ${ACTIVITYPUB_TARGET}
+      COMPOSE_PROFILES: ${COMPOSE_PROFILES}
     volumes:
-      - ${UPLOAD_LOCATION:-./data/ghost}:/var/lib/ghost/content
+      - ./data/ghost:/var/lib/ghost/content
     depends_on:
       db:
         condition: service_healthy
-      tinybird-sync:
-        condition: service_completed_successfully
-        required: false
-      tinybird-deploy:
-        condition: service_completed_successfully
-        required: false
       activitypub:
         condition: service_started
-        required: false
+        required: true
     networks:
-      - ghost_network
+      - dokploy-network
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.ghost.rule=Host(`${DOMAIN}`)"
+      - "traefik.http.routers.ghost.entrypoints=websecure"
+      - "traefik.http.routers.ghost.tls.certresolver=letsencrypt"
+      - "traefik.http.services.ghost.loadbalancer.server.port=2368"
+
+      # Security Headers
+      - "traefik.http.middlewares.security-headers.headers.customrequestheaders.Strict-Transport-Security=max-age=31536000"
+      - "traefik.http.middlewares.security-headers.headers.customrequestheaders.X-XSS-Protection=1; mode=block"
+      - "traefik.http.middlewares.security-headers.headers.customrequestheaders.X-Content-Type-Options=nosniff"
+      - "traefik.http.middlewares.security-headers.headers.customrequestheaders.Referrer-Policy=strict-origin-when-cross-origin"
+
+      # Compression
+      - "traefik.http.middlewares.gzip.compress=true"
+
+      # Apply middlewares
+      - "traefik.http.routers.ghost.middlewares=security-headers,gzip"
 
   db:
     image: mysql:8.0.42@sha256:4445b2668d41143cb50e471ee207f8822006249b6859b24f7e12479684def5d9
     restart: always
-    expose:
-      - 3306
     environment:
-      MYSQL_ROOT_PASSWORD: ${DATABASE_ROOT_PASSWORD:?DATABASE_ROOT_PASSWORD environment variable is required}
-      MYSQL_USER: ${DATABASE_USER:-ghost}
-      MYSQL_PASSWORD: ${DATABASE_PASSWORD:?DATABASE_PASSWORD environment variable is required}
+      MYSQL_ROOT_PASSWORD: ${DATABASE_ROOT_PASSWORD}
+      MYSQL_USER: ${DATABASE_USER}
+      MYSQL_PASSWORD: ${DATABASE_PASSWORD}
       MYSQL_DATABASE: ghost
       MYSQL_MULTIPLE_DATABASES: activitypub
     volumes:
-      - ${MYSQL_DATA_LOCATION:-./data/mysql}:/var/lib/mysql
-      - ./mysql-init:/docker-entrypoint-initdb.d
+      - ./data/mysql:/var/lib/mysql
+      - ../mysql-init:/docker-entrypoint-initdb.d
     healthcheck:
       test: mysqladmin ping -p$$MYSQL_ROOT_PASSWORD -h 127.0.0.1
       interval: 1s
@@ -85,39 +68,20 @@ services:
       start_interval: 10s
       retries: 120
     networks:
-      - ghost_network
-
-  traffic-analytics:
-    image: ghost/traffic-analytics:1.0.9@sha256:693e752f420b8b1bfcf9867946a09966552a15d4797b86b90ecf3d1dd0e1067c
-    restart: always
-    expose:
-      - 3000
-    volumes:
-      - traffic_analytics_data:/data
-    environment:
-      NODE_ENV: production
-      PROXY_TARGET: ${TINYBIRD_API_URL:-https://api.tinybird.co}/v0/events
-      SALT_STORE_TYPE: ${SALT_STORE_TYPE:-file}
-      SALT_STORE_FILE_PATH: /data/salts.json
-      TINYBIRD_TRACKER_TOKEN: ${TINYBIRD_TRACKER_TOKEN:-}
-      LOG_LEVEL: debug
-    profiles: [analytics]
-    networks:
-      - ghost_network
+      - dokploy-network
 
   activitypub:
-    image: ghcr.io/tryghost/activitypub:1.1.0@sha256:39c212fe23603b182d68e67d555c6b9b04b1e57459dfc0bef26d6e4980eb04d1
+    build:
+      context: ../activitypub
     restart: always
-    expose:
-      - 8080
     volumes:
-      - ${UPLOAD_LOCATION:-./data/ghost}:/opt/activitypub/content
+      - ./data/ghost:/opt/activitypub/content
     environment:
       NODE_ENV: production
       PORT: 8080
       MYSQL_HOST: db
-      MYSQL_USER: ${DATABASE_USER:-ghost}
-      MYSQL_PASSWORD: ${DATABASE_PASSWORD:?DATABASE_PASSWORD environment variable is required}
+      MYSQL_USER: ${DATABASE_USER}
+      MYSQL_PASSWORD: ${DATABASE_PASSWORD}
       MYSQL_DATABASE: activitypub
       ALLOW_PRIVATE_ADDRESS: true
       USE_MQ: false
@@ -130,85 +94,48 @@ services:
         condition: service_completed_successfully
     profiles: [activitypub]
     networks:
-      - ghost_network
+      - dokploy-network
+    labels:
+      - "traefik.enable=true"
 
-  # Suporting Services
+      # ActivityPub endpoints
+      - "traefik.http.routers.activitypub.rule=Host(`${DOMAIN}`) && PathPrefix(`/.ghost/activitypub`)"
+      - "traefik.http.routers.activitypub.entrypoints=websecure"
+      - "traefik.http.routers.activitypub.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.activitypub.priority=100"
 
-  # tinybird-login:
-  #   build:
-  #     context: ./tinybird
-  #     dockerfile: Dockerfile
-  #   working_dir: /home/tinybird
-  #   command: /usr/local/bin/tinybird-login
-  #   volumes:
-  #     - tinybird_home:/home/tinybird
-  #     - tinybird_files:/data/tinybird
-  #   profiles: [analytics]
-  #   networks:
-  #     - ghost_network
-  #   tty: false
-  #   restart: no
+      # WebFinger endpoint
+      - "traefik.http.routers.webfinger.rule=Host(`${DOMAIN}`) && Path(`/.well-known/webfinger`)"
+      - "traefik.http.routers.webfinger.entrypoints=websecure"
+      - "traefik.http.routers.webfinger.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.webfinger.priority=100"
 
-  tinybird-sync:
-    image: ghost:${GHOST_VERSION:-6-alpine}
-    command: >
-      sh -c "
-        if [ -d /var/lib/ghost/current/core/server/data/tinybird ]; then
-          rm -rf /data/tinybird/*;
-          cp -rf /var/lib/ghost/current/core/server/data/tinybird/* /data/tinybird/;
-          echo 'Tinybird files synced into shared volume.';
-        else
-          echo 'Tinybird source directory not found.';
-        fi
-      "
-    volumes:
-      - tinybird_files:/data/tinybird
-    depends_on:
-      tinybird-login:
-        condition: service_completed_successfully
-    networks:
-      - ghost_network
-    profiles: [analytics]
-    restart: no
+      # NodeInfo endpoint
+      - "traefik.http.routers.nodeinfo.rule=Host(`${DOMAIN}`) && Path(`/.well-known/nodeinfo`)"
+      - "traefik.http.routers.nodeinfo.entrypoints=websecure"
+      - "traefik.http.routers.nodeinfo.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.nodeinfo.priority=100"
 
-  tinybird-deploy:
-    build:
-      context: ./tinybird
-      dockerfile: Dockerfile
-    working_dir: /data/tinybird
-    command: >
-      sh -c "
-        tb-wrapper --cloud deploy
-      "
-    volumes:
-      - tinybird_home:/home/tinybird
-      - tinybird_files:/data/tinybird
-    depends_on:
-      tinybird-sync:
-        condition: service_completed_successfully
-    profiles: [analytics]
-    networks:
-      - ghost_network
-    tty: true
+      - "traefik.http.services.activitypub.loadbalancer.server.port=8080"
+      - "traefik.http.routers.activitypub.middlewares=security-headers"
+      - "traefik.http.routers.webfinger.middlewares=security-headers"
+      - "traefik.http.routers.nodeinfo.middlewares=security-headers"
 
   activitypub-migrate:
-    image: ghcr.io/tryghost/activitypub-migrations:1.1.0@sha256:b3ab20f55d66eb79090130ff91b57fe93f8a4254b446c2c7fa4507535f503662
+    build:
+      context: ../activitypub/migrate
     environment:
-      MYSQL_DB: mysql://${DATABASE_USER:-ghost}:${DATABASE_PASSWORD:?DATABASE_PASSWORD environment variable is required}@tcp(db:3306)/activitypub
-    networks:
-      - ghost_network
+      MYSQL_DB: mysql://${DATABASE_USER}:${DATABASE_PASSWORD}@tcp(db:3306)/activitypub
     depends_on:
       db:
         condition: service_healthy
     profiles: [activitypub]
     restart: no
-
-volumes:
-  caddy_data:
-  caddy_config:
-  tinybird_files:
-  tinybird_home:
-  traffic_analytics_data:
+    networks:
+      - dokploy-network
+    command: >
+      sh -c "sleep 5 && migrate -path /migrations -database $${MYSQL_DB} up"
 
 networks:
-  ghost_network:
+  dokploy-network:
+    external: true
