--- a/compose.yml
+++ b/compose.yml
@@ -123,7 +123,7 @@ services:
 
   activitypub-migrate:
     build:
-      context: ../activitypub/migrate
+      context: activitypub/migrate
     environment:
       MYSQL_DB: mysql://${DATABASE_USER}:${DATABASE_PASSWORD}@tcp(db:3306)/activitypub
     depends_on:
